#1811 - Fixes the widget loading spinner visibility

--- a/wp-content/themes/Helsingborg/css/admin-hbg.css
+++ b/wp-content/themes/Helsingborg/css/admin-hbg.css
@@ -1,3 +1,12 @@
+
+
+.widget-control-actions .spinner {
+    visibility: visible;
+    display: none;
+}
+
+
+
 /**
  * Style the major publishing action section in create post
  */
